@@ -1909,6 +1909,8 @@ $1
 'tooltip-ca-watch'                => 'הוסיפו דף זה לרשימת המעקב',
 'tooltip-ca-unwatch'              => 'הסירו דף זה מרשימת המעקב',
 'tooltip-search'                  => 'חיפוש ב{{grammar:תחילית|{{SITENAME}}}}',
+'tooltip-search-go'               => 'עברו לדף בשם הזה בדיוק, אם הוא קיים',
+'tooltip-search-fulltext'         => 'חפשו טקסט זה בדפים',
 'tooltip-p-logo'                  => 'עמוד ראשי',
 'tooltip-n-mainpage'              => 'בקרו בעמוד הראשי',
 'tooltip-n-portal'                => 'אודות המיזם, איך תוכלו לעזור, איפה למצוא דברים',
