@@ -1535,6 +1535,8 @@ $wgMessageStructure = array(
 		'accesskey-ca-watch',
 		'accesskey-ca-unwatch',
 		'accesskey-search',
+		'accesskey-search-go',
+		'accesskey-search-fulltext',
 		'accesskey-p-logo',
 		'accesskey-n-mainpage',
 		'accesskey-n-portal',
@@ -1594,6 +1596,8 @@ $wgMessageStructure = array(
 		'tooltip-ca-watch',
 		'tooltip-ca-unwatch',
 		'tooltip-search',
+		'tooltip-search-go',
+		'tooltip-search-fulltext',
 		'tooltip-p-logo',
 		'tooltip-n-mainpage',
 		'tooltip-n-portal',
